Updating to new xstream, similar to 3.05 updates.Updating tests and gradle to use jvm arg jvmArgs '--illegal-access=permit'  as well.