@@ -4,18 +4,13 @@ plugins {
     id 'application'
     id 'org.jetbrains.kotlin.jvm' version '1.5.31'
     // id 'checkstyle'
-
     // Fixes problem with long filenames
     id "ua.eshepelyuk.ManifestClasspath" version "1.0.0"
-
 }
 
-compileJava.options.encoding = 'UTF-8'
-
 def versionName = "Simbrain4Beta"
-def jmonkeyengine_version = '3.4.0-stable'
-
 mainClassName = 'org.simbrain.workspace.gui.Splasher'
+compileJava.options.encoding = 'UTF-8'
 
 // When updating also search for "jvmTarget" and update those
 sourceCompatibility = 1.11
@@ -27,12 +22,12 @@ repositories {
 dependencies {
 
     // Kotlin
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.5.21'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.5.31'
     implementation 'org.jetbrains.kotlin:kotlin-scripting-jvm-host:1.5.21'
     implementation 'org.jetbrains.kotlin:kotlin-scripting-jsr223:1.5.21'
-    implementation 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.5.21'
-    implementation 'org.jetbrains.kotlin:kotlin-scripting-compiler-embeddable:1.5.21'
-    implementation 'org.jetbrains.kotlin:kotlin-script-util:1.5.21'
+    implementation 'org.jetbrains.kotlin:kotlin-compiler-embeddable:1.5.31'
+    implementation 'org.jetbrains.kotlin:kotlin-scripting-compiler-embeddable:1.5.31'
+    implementation 'org.jetbrains.kotlin:kotlin-script-util:1.5.31'
     implementation 'org.jetbrains.kotlin:kotlin-script-runtime:1.5.21'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.5.2-native-mt'
@@ -45,10 +40,10 @@ dependencies {
     implementation 'com.github.haifengl:smile-mkl:2.6.0'
 
     // JUnit
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.0'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
     testImplementation(platform('org.junit:junit-bom:5.7.1'))
-    testImplementation('org.junit.jupiter:junit-jupiter:5.8.0')
+    testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
 
     // https://mvnrepository.com/artifact/com.github.haifengl/smile-core
     implementation group: 'com.github.haifengl', name: 'smile-core', version: '2.6.0'
@@ -97,13 +92,19 @@ dependencies {
 
 }
 
+run {
+    jvmArgs '--illegal-access=permit'
+}
+
 test {
+    jvmArgs '--illegal-access=permit'
     useJUnitPlatform()
 }
 
 // Sample invocation:
 // gradle runSim -PsimName="Test Sim"
 task runSim(type: JavaExec) {
+    jvmArgs '--illegal-access=permit'
     classpath = sourceSets.main.runtimeClasspath
     main = "org.simbrain.custom_sims.RegisteredSimulationsKt"
     if(project.hasProperty('simName')){
